Remove extra files, fix bugs, add isTreeBST solution.