@@ -6,13 +6,15 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 
 public class TestUtils {
-  public static List<List<String>> splitTsvFile(Path tsvFile) {
+  @SuppressWarnings("resource")
+public static List<List<String>> splitTsvFile(Path tsvFile) {
     final String FIELD_DELIM = "\t";
 
     Stream<String> inputData = null;
@@ -27,7 +29,7 @@ public class TestUtils {
 
     List<List<String>> result = new ArrayList<>();
     for (String line : asList) {
-      result.add(List.of(line.split(FIELD_DELIM)));
+      result.add(Arrays.asList(line.split(FIELD_DELIM)));
     }
     return result;
   }
